@@ -26,16 +26,16 @@ import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
 import java.awt.geom.AffineTransform;
 import java.awt.geom.Rectangle2D;
+import java.awt.image.BufferedImage;
 import java.beans.PropertyChangeEvent;
-import java.beans.PropertyChangeListener;
 import java.beans.PropertyVetoException;
 import java.beans.VetoableChangeListener;
+import java.lang.reflect.InvocationTargetException;
 import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.Hashtable;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.ResourceBundle;
@@ -65,11 +65,14 @@ import javax.swing.SpinnerNumberModel;
 import javax.swing.Timer;
 import javax.swing.WindowConstants;
 import javax.swing.event.ListSelectionEvent;
+
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import jmri.BlockManager;
 import jmri.ConfigureManager;
 import jmri.InstanceManager;
 import jmri.Light;
 import jmri.NamedBean;
+import jmri.NamedBeanUsageReport;
 import jmri.Reporter;
 import jmri.ShutDownManager;
 import jmri.SignalHeadManager;
@@ -98,17 +101,17 @@ import org.slf4j.LoggerFactory;
  * attributes of the Positionable objects is done here. However, control of
  * mouse events is passed to the editor views, so control is also done by the
  * editor views.
- * <P>
+ * <p>
  * The "contents" List keeps track of all the objects added to the target frame
  * for later manipulation. This class only locates and moves "target panel"
  * items, and does not control their appearance - that is left for the editor
  * views.
- * <P>
+ * <p>
  * The Editor has tri-state "flags" to control the display of Positionable
  * object attributes globally - i.e. "on" or "off" for all - or as a third
  * state, permits the display control "locally" by corresponding flags in each
  * Positionable object
- * <P>
+ * <p>
  * The title of the target and the editor panel are kept consistent via the
  * {#setTitle} method.
  * <p>
@@ -154,8 +157,6 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     final public static int SCROLL_VERTICAL = 3;
 
     final public static Color HIGHLIGHT_COLOR = new Color(204, 207, 88);
-
-    public static final ResourceBundle rbean = ResourceBundle.getBundle("jmri.NamedBeanBundle");
 
     public static final String POSITIONABLE_FLAVOR = DataFlavor.javaJVMLocalObjectMimeType
             + ";class=jmri.jmrit.display.Positionable";
@@ -218,7 +219,6 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     // map of icon editor frames (incl, icon editor) keyed by name
     protected HashMap<String, JFrameItem> _iconEditorFrame = new HashMap<>();
 
-    private static volatile ArrayList<Editor> editors = new ArrayList<>();
     // store panelMenu state so preference is retained on headless systems
     private boolean panelMenuIsVisible = true;
 
@@ -236,7 +236,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         InstanceManager.sensorManagerInstance().addVetoableChangeListener(this);
         InstanceManager.memoryManagerInstance().addVetoableChangeListener(this);
         InstanceManager.getDefault(BlockManager.class).addVetoableChangeListener(this);
-        editors.add(this);
+        InstanceManager.getDefault(EditorManager.class).addEditor(this);
     }
 
     public Editor(String name) {
@@ -262,6 +262,9 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
 
     public NamedIcon loadFailed(String msg, String url) {
         log.debug("loadFailed _ignore= {} {}", _ignore, msg);
+        if (_urlMap == null) {
+            _urlMap = new HashMap<>();
+        }
         String goodUrl = _urlMap.get(url);
         if (goodUrl != null) {
             return NamedIcon.getIconByName(goodUrl);
@@ -287,7 +290,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         return this;
     }
 
-    class UrlErrorDialog extends JDialog {
+    public class UrlErrorDialog extends JDialog {
 
         JTextField _urlField;
         CatalogPanel _catalog;
@@ -331,37 +334,28 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             JPanel result = new JPanel();
             result.setLayout(new FlowLayout());
             JButton doneButton = new JButton(Bundle.getMessage("ButtonContinue"));
-            doneButton.addActionListener(new ActionListener() {
-                @Override
-                public void actionPerformed(ActionEvent a) {
-                    _newIcon = NamedIcon.getIconByName(_urlField.getText());
-                    if (_newIcon != null) {
-                        _urlMap.put(_badUrl, _urlField.getText());
-                    }
-                    dispose();
+            doneButton.addActionListener(a -> {
+                _newIcon = NamedIcon.getIconByName(_urlField.getText());
+                if (_newIcon != null) {
+                    _urlMap.put(_badUrl, _urlField.getText());
                 }
+                dispose();
             });
             doneButton.setToolTipText(Bundle.getMessage("TooltipContinue"));
             result.add(doneButton);
 
             JButton deleteButton = new JButton(Bundle.getMessage("ButtonDelete"));
-            deleteButton.addActionListener(new ActionListener() {
-                @Override
-                public void actionPerformed(ActionEvent a) {
-                    _delete = true;
-                    dispose();
-                }
+            deleteButton.addActionListener(a -> {
+                _delete = true;
+                dispose();
             });
             result.add(deleteButton);
             deleteButton.setToolTipText(Bundle.getMessage("TooltipDelete"));
 
             JButton cancelButton = new JButton(Bundle.getMessage("ButtonIgnore"));
-            cancelButton.addActionListener(new ActionListener() {
-                @Override
-                public void actionPerformed(ActionEvent a) {
-                    _ignore = true;
-                    dispose();
-                }
+            cancelButton.addActionListener(a -> {
+                _ignore = true;
+                dispose();
             });
             result.add(cancelButton);
             cancelButton.setToolTipText(Bundle.getMessage("TooltipIgnore"));
@@ -467,19 +461,27 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     }
 
     public Color getBackgroundColor() {
-        TargetPane tmp = (TargetPane) _targetPanel;
-        return tmp.getBackgroundColor();
+        if (_targetPanel instanceof TargetPane) {
+            TargetPane tmp = (TargetPane) _targetPanel;
+            return tmp.getBackgroundColor();
+        } else {
+            return null;
+        }
     }
 
     public void setBackgroundColor(Color col) {
-        TargetPane tmp = (TargetPane) _targetPanel;
-        tmp.setBackgroundColor(col);
+        if (_targetPanel instanceof TargetPane) {
+            TargetPane tmp = (TargetPane) _targetPanel;
+            tmp.setBackgroundColor(col);
+        }
         JmriColorChooser.addRecentColor(col);
     }
 
     public void clearBackgroundColor() {
-        TargetPane tmp = (TargetPane) _targetPanel;
-        tmp.clearBackgroundColor();
+        if (_targetPanel instanceof TargetPane) {
+            TargetPane tmp = (TargetPane) _targetPanel;
+            tmp.clearBackgroundColor();
+        }
     }
 
     /**
@@ -598,7 +600,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             int hnew = Math.max(this.h, c.getLocation().y + c.getSize().height);
             int wnew = Math.max(this.w, c.getLocation().x + c.getSize().width);
             if (hnew > h || wnew > w) {
-//                log.debug("size was {},{} - i =", w, h, i);
+//                log.debug("size was {},{} - i ={}", w, h, i);
                 setSize(wnew, hnew);
             }
             return super.add(c, i);
@@ -651,8 +653,13 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
                 g2d.scale(_paintScale, _paintScale);
             }
 
-            super.paint(g);
-            paintTargetPanel(g);
+            // It is rather unpleasant that the following needs to be done in a try-catch, but exceptions have been observed
+            try {
+               super.paint(g);
+               paintTargetPanel(g);
+            } catch (Exception e) {
+                log.error("paint failed in thread {} {}: ", Thread.currentThread().getName(), Thread.currentThread().getId(), e);
+            }
 
             Stroke stroke = new BasicStroke();
             if (g2d != null) {
@@ -676,8 +683,10 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
                     drawSelectedItem(p, g2d);
                 }
             } else if(_currentSelection!=null) {
-                g2d.setColor(_selectGroupColor);
-                g2d.setStroke(new java.awt.BasicStroke(2.0f));
+                if (g2d != null) {
+                    g2d.setColor(_selectGroupColor);
+                    g2d.setStroke(new java.awt.BasicStroke(2.0f));
+                }
                 drawSelectedItem(_currentSelection, g2d);             
             }
             //Draws a border around the highlighted component
@@ -752,7 +761,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         vertScroll.setValue(vScroll);
     }
 
-    /**
+    /*
      * ********************** Options setup *********************
      */
     /**
@@ -933,7 +942,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      * Control whether target panel items will show their coordinates in their
      * popup menu.
      *
-     * @param state true for show coodinates.
+     * @param state true for show coordinates.
      */
  /*
      public void setShowCoordinates(boolean state) {
@@ -946,18 +955,6 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      return _showCoordinates;
      }
      */
-    /**
-     * Control whether target panel shows a menu
-     *
-     * @param state true for controlling.
-     * @deprecated 3.9.5
-     * @see #setPanelMenuVisible(boolean)
-     */
-    @Deprecated
-    public void setPanelMenu(boolean state) {
-        _targetFrame.getJMenuBar().setVisible(state);
-        validate();
-    }
 
     /**
      * Hide or show menus on the target panel.
@@ -1046,10 +1043,10 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         }
         return value;
     }
-
     /*
      * *********************** end Options setup **********************
      */
+
     /**
      * Handle closing the target window.
      * <p>
@@ -1071,13 +1068,13 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
                 message = Bundle.getMessage("PanelCloseQuestion") + "\n"
                         + Bundle.getMessage("PanelCloseHelp");
             }
-            if (_targetPanel.getTopLevelAncestor() != null) {
-                name = ((JFrame) _targetPanel.getTopLevelAncestor()).getTitle();
+            Container ancestor = _targetPanel.getTopLevelAncestor();
+            if (ancestor instanceof JFrame) {
+                name = ((JFrame) ancestor).getTitle();
             }
             if (!InstanceManager.getDefault(ShutDownManager.class).isShuttingDown()) {
                 int selectedValue = JOptionPane.showOptionDialog(_targetPanel,
-                        MessageFormat.format(message,
-                                new Object[]{name}), Bundle.getMessage("ReminderTitle"),
+                        MessageFormat.format(message, name), Bundle.getMessage("ReminderTitle"),
                         JOptionPane.YES_NO_CANCEL_OPTION, JOptionPane.QUESTION_MESSAGE,
                         null, new Object[]{Bundle.getMessage("ButtonHide"), Bundle.getMessage("ButtonDeletePanel"),
                             Bundle.getMessage("ButtonDontShow")}, Bundle.getMessage("ButtonHide"));
@@ -1110,11 +1107,10 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     }
 
     protected Editor changeView(String className) {
-
         JFrame frame = getTargetFrame();
 
         try {
-            Editor ed = (Editor) Class.forName(className).newInstance();
+            Editor ed = (Editor) Class.forName(className).getDeclaredConstructor().newInstance();
 
             ed.setName(getName());
             ed.init(getName());
@@ -1146,12 +1142,8 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             InstanceManager.getDefault(PanelMenu.class).addEditorPanel(ed);
             dispose();
             return ed;
-        } catch (ClassNotFoundException cnfe) {
+        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException cnfe) {
             log.error("changeView exception {}", cnfe.toString());
-        } catch (InstantiationException ie) {
-            log.error("changeView exception {}", ie.toString());
-        } catch (IllegalAccessException iae) {
-            log.error("changeView exception {}", iae.toString());
         }
         return null;
     }
@@ -1159,11 +1151,10 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     /*
      * *********************** Popup Item Methods **********************
      *
-     *
      * These methods are to be called from the editor view's showPopUp method
      */
     /**
-     * Add a checkbox to lock the position of the Positionable item
+     * Add a checkbox to lock the position of the Positionable item.
      *
      * @param p     the item
      * @param popup the menu to add the lock menu item to
@@ -1538,13 +1529,9 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         mtext.setText(Bundle.getMessage("SelectLoco") + ":");
         locoRosterFrame.getContentPane().add(mtext);
         final RosterEntrySelectorPanel rosterBox = new RosterEntrySelectorPanel();
-        rosterBox.addPropertyChangeListener("selectedRosterEntries", new PropertyChangeListener() {
-
-            @Override
-            public void propertyChange(PropertyChangeEvent pce) {
-                if (rosterBox.getSelectedRosterEntries().length != 0) {
-                    selectLoco(rosterBox.getSelectedRosterEntries()[0]);
-                }
+        rosterBox.addPropertyChangeListener("selectedRosterEntries", pce -> {
+            if (rosterBox.getSelectedRosterEntries().length != 0) {
+                selectLoco(rosterBox.getSelectedRosterEntries()[0]);
             }
         });
         locoRosterFrame.getContentPane().add(rosterBox);
@@ -1597,16 +1584,13 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         locoId.setToolTipText(Bundle.getMessage("EnterLocoID"));
         JButton okay = new JButton();
         okay.setText(Bundle.getMessage("ButtonOK"));
-        okay.addActionListener(new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent e) {
-                String nameID = locoId.getText();
-                if ((nameID != null) && !(nameID.trim().equals(""))) {
-                    addLocoIcon(nameID.trim());
-                } else {
-                    JOptionPane.showMessageDialog(locoFrame, Bundle.getMessage("ErrorEnterLocoID"),
-                            Bundle.getMessage("ErrorTitle"), JOptionPane.ERROR_MESSAGE);
-                }
+        okay.addActionListener(e -> {
+            String nameID = locoId.getText();
+            if ((nameID != null) && !(nameID.trim().equals(""))) {
+                addLocoIcon(nameID.trim());
+            } else {
+                JOptionPane.showMessageDialog(locoFrame, Bundle.getMessage("ErrorEnterLocoID"),
+                        Bundle.getMessage("ErrorTitle"), JOptionPane.ERROR_MESSAGE);
             }
         });
         locoFrame.getContentPane().add(okay);
@@ -1726,13 +1710,12 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         }
     }
 
-    protected void addToTarget(Positionable l) {
-        JComponent c = l;
-        c.invalidate();
-        _targetPanel.remove(c);
-        _targetPanel.add(c, Integer.valueOf(l.getDisplayLevel()));
-        _targetPanel.moveToFront(c);
-        c.repaint();
+    protected void addToTarget(Positionable pos) {
+        pos.invalidate();
+        _targetPanel.remove(pos);
+        _targetPanel.add(pos, Integer.valueOf(pos.getDisplayLevel()));
+        _targetPanel.moveToFront(pos);
+        pos.repaint();
         _targetPanel.revalidate();
     }
 
@@ -1836,12 +1819,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         _iconEditorFrame.put("RightTurnout", frame);
         editor.setPickList(PickListModel.turnoutPickModelInstance());
 
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                addTurnoutR();
-            }
-        };
+        ActionListener addIconAction = a -> addTurnoutR();
         editor.makeIconPanel(true);
         editor.complete(addIconAction, true, true, false);
         frame.addHelpMenu("package.jmri.jmrit.display.IconAdder", true);
@@ -1862,12 +1840,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         _iconEditorFrame.put("LeftTurnout", frame);
         editor.setPickList(PickListModel.turnoutPickModelInstance());
 
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                addTurnoutL();
-            }
-        };
+        ActionListener addIconAction = a -> addTurnoutL();
         editor.makeIconPanel(true);
         editor.complete(addIconAction, true, true, false);
         frame.addHelpMenu("package.jmri.jmrit.display.IconAdder", true);
@@ -1892,12 +1865,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         _iconEditorFrame.put("SlipTOEditor", frame);
         editor.setPickList(PickListModel.turnoutPickModelInstance());
 
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                addSlip();
-            }
-        };
+        ActionListener addIconAction = a -> addSlip();
         editor.makeIconPanel(true);
         editor.complete(addIconAction, true, true, false);
         frame.addHelpMenu("package.jmri.jmrit.display.SlipTurnoutIcon", true);
@@ -1918,40 +1886,10 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         _iconEditorFrame.put("Sensor", frame);
         editor.setPickList(PickListModel.sensorPickModelInstance());
 
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                putSensor();
-            }
-        };
+        ActionListener addIconAction = a -> putSensor();
         editor.makeIconPanel(true);
         editor.complete(addIconAction, true, true, false);
         frame.addHelpMenu("package.jmri.jmrit.display.IconAdder", true);
-    }
-
-    protected IconAdder getSignalHeadEditor() {
-        IconAdder editor = new IconAdder("SignalHead");
-        editor.setIcon(0, rbean.getString("SignalHeadStateRed"),
-                "resources/icons/smallschematics/searchlights/left-red-marker.gif");
-        editor.setIcon(1, rbean.getString("SignalHeadStateYellow"),
-                "resources/icons/smallschematics/searchlights/left-yellow-marker.gif");
-        editor.setIcon(2, rbean.getString("SignalHeadStateGreen"),
-                "resources/icons/smallschematics/searchlights/left-green-marker.gif");
-        editor.setIcon(3, rbean.getString("SignalHeadStateDark"),
-                "resources/icons/smallschematics/searchlights/left-dark-marker.gif");
-        editor.setIcon(4, rbean.getString("SignalHeadStateHeld"),
-                "resources/icons/smallschematics/searchlights/left-held-marker.gif");
-        editor.setIcon(5, rbean.getString("SignalHeadStateLunar"),
-                "resources/icons/smallschematics/searchlights/left-lunar-marker.gif");
-        editor.setIcon(6, rbean.getString("SignalHeadStateFlashingRed"),
-                "resources/icons/smallschematics/searchlights/left-flashred-marker.gif");
-        editor.setIcon(7, rbean.getString("SignalHeadStateFlashingYellow"),
-                "resources/icons/smallschematics/searchlights/left-flashyellow-marker.gif");
-        editor.setIcon(8, rbean.getString("SignalHeadStateFlashingGreen"),
-                "resources/icons/smallschematics/searchlights/left-flashgreen-marker.gif");
-        editor.setIcon(9, rbean.getString("SignalHeadStateFlashingLunar"),
-                "resources/icons/smallschematics/searchlights/left-flashlunar-marker.gif");
-        return editor;
     }
 
     protected void addSignalHeadEditor() {
@@ -1960,15 +1898,36 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         _iconEditorFrame.put("SignalHead", frame);
         editor.setPickList(PickListModel.signalHeadPickModelInstance());
 
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                putSignalHead();
-            }
-        };
+        ActionListener addIconAction = a -> putSignalHead();
         editor.makeIconPanel(true);
         editor.complete(addIconAction, true, false, false);
         frame.addHelpMenu("package.jmri.jmrit.display.IconAdder", true);
+    }
+
+    protected IconAdder getSignalHeadEditor() {
+        // note that all these icons will be refreshed when user clicks a specific signal head in the table
+        IconAdder editor = new IconAdder("SignalHead");
+        editor.setIcon(0, "SignalHeadStateRed",
+                "resources/icons/smallschematics/searchlights/left-red-marker.gif");
+        editor.setIcon(1, "SignalHeadStateYellow",
+                "resources/icons/smallschematics/searchlights/left-yellow-marker.gif");
+        editor.setIcon(2, "SignalHeadStateGreen",
+                "resources/icons/smallschematics/searchlights/left-green-marker.gif");
+        editor.setIcon(3, "SignalHeadStateDark",
+                "resources/icons/smallschematics/searchlights/left-dark-marker.gif");
+        editor.setIcon(4, "SignalHeadStateHeld",
+                "resources/icons/smallschematics/searchlights/left-held-marker.gif");
+        editor.setIcon(5, "SignalHeadStateLunar",
+                "resources/icons/smallschematics/searchlights/left-lunar-marker.gif");
+        editor.setIcon(6, "SignalHeadStateFlashingRed",
+                "resources/icons/smallschematics/searchlights/left-flashred-marker.gif");
+        editor.setIcon(7, "SignalHeadStateFlashingYellow",
+                "resources/icons/smallschematics/searchlights/left-flashyellow-marker.gif");
+        editor.setIcon(8, "SignalHeadStateFlashingGreen",
+                "resources/icons/smallschematics/searchlights/left-flashgreen-marker.gif");
+        editor.setIcon(9, "SignalHeadStateFlashingLunar",
+                "resources/icons/smallschematics/searchlights/left-flashlunar-marker.gif");
+        return editor;
     }
 
     protected void addSignalMastEditor() {
@@ -1978,41 +1937,26 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         _iconEditorFrame.put("SignalMast", frame);
         editor.setPickList(PickListModel.signalMastPickModelInstance());
 
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                putSignalMast();
-            }
-        };
+        ActionListener addIconAction = a -> putSignalMast();
         editor.makeIconPanel(true);
         editor.complete(addIconAction, true, false, false);
         frame.addHelpMenu("package.jmri.jmrit.display.IconAdder", true);
     }
 
-    SpinnerNumberModel _spinCols = new SpinnerNumberModel(3, 1, 100, 1);
+    private final SpinnerNumberModel _spinCols = new SpinnerNumberModel(3, 1, 100, 1);
 
     protected void addMemoryEditor() {
         IconAdder editor = new IconAdder("Memory") {
-            JButton bSpin = new JButton(Bundle.getMessage("AddSpinner"));
-            JButton bBox = new JButton(Bundle.getMessage("AddInputBox"));
-            JSpinner spinner = new JSpinner(_spinCols);
+            final JButton bSpin = new JButton(Bundle.getMessage("AddSpinner"));
+            final JButton bBox = new JButton(Bundle.getMessage("AddInputBox"));
+            final JSpinner spinner = new JSpinner(_spinCols);
 
             @Override
             protected void addAdditionalButtons(JPanel p) {
-                bSpin.addActionListener(new ActionListener() {
-                    @Override
-                    public void actionPerformed(ActionEvent a) {
-                        addMemorySpinner();
-                    }
-                });
+                bSpin.addActionListener(a -> addMemorySpinner());
                 JPanel p1 = new JPanel();
                 //p1.setLayout(new BoxLayout(p1, BoxLayout.X_AXIS));
-                bBox.addActionListener(new ActionListener() {
-                    @Override
-                    public void actionPerformed(ActionEvent a) {
-                        addMemoryInputBox();
-                    }
-                });
+                bBox.addActionListener(a -> addMemoryInputBox());
                 ((JSpinner.DefaultEditor) spinner.getEditor()).getTextField().setColumns(2);
                 spinner.setMaximumSize(spinner.getPreferredSize());
                 JPanel p2 = new JPanel();
@@ -2033,12 +1977,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
                 bBox.setEnabled(addIconIsEnabled());
             }
         };
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                putMemory();
-            }
-        };
+        ActionListener addIconAction = a -> putMemory();
         JFrameItem frame = makeAddIconFrame("Memory", true, true, editor);
         _iconEditorFrame.put("Memory", frame);
         editor.setPickList(PickListModel.memoryPickModelInstance());
@@ -2049,12 +1988,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
 
     protected void addBlockContentsEditor() {
         IconAdder editor = new IconAdder("Block Contents");
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                putBlockContents();
-            }
-        };
+        ActionListener addIconAction = a -> putBlockContents();
         JFrameItem frame = makeAddIconFrame("BlockLabel", true, true, editor);
         _iconEditorFrame.put("BlockLabel", frame);
         editor.setPickList(PickListModel.blockPickModelInstance());
@@ -2065,12 +1999,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
 
     protected void addReporterEditor() {
         IconAdder editor = new IconAdder("Reporter");
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                addReporter();
-            }
-        };
+        ActionListener addIconAction = a -> addReporter();
         JFrameItem frame = makeAddIconFrame("Reporter", true, true, editor);
         _iconEditorFrame.put("Reporter", frame);
         editor.setPickList(PickListModel.reporterPickModelInstance());
@@ -2094,12 +2023,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         _iconEditorFrame.put("Light", frame);
         editor.setPickList(PickListModel.lightPickModelInstance());
 
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                addLight();
-            }
-        };
+        ActionListener addIconAction = a -> addLight();
         editor.makeIconPanel(true);
         editor.complete(addIconAction, true, true, false);
         frame.addHelpMenu("package.jmri.jmrit.display.IconAdder", true);
@@ -2112,12 +2036,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         JFrameItem frame = makeAddIconFrame("Background", true, false, editor);
         _iconEditorFrame.put("Background", frame);
 
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                putBackground();
-            }
-        };
+        ActionListener addIconAction = a -> putBackground();
         editor.makeIconPanel(true);
         editor.complete(addIconAction, true, false, false);
         frame.addHelpMenu("package.jmri.jmrit.display.IconAdder", true);
@@ -2144,12 +2063,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
 
         editor.setPickList(PickListModel.sensorPickModelInstance());
 
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                addMultiSensor();
-            }
-        };
+        ActionListener addIconAction = a -> addMultiSensor();
         editor.makeIconPanel(true);
         editor.complete(addIconAction, true, true, false);
         return frame;
@@ -2161,12 +2075,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         JFrameItem frame = makeAddIconFrame("Icon", true, false, editor);
         _iconEditorFrame.put("Icon", frame);
 
-        ActionListener addIconAction = new ActionListener() {
-            @Override
-            public void actionPerformed(ActionEvent a) {
-                putIcon();
-            }
-        };
+        ActionListener addIconAction = a -> putIcon();
         editor.makeIconPanel(true);
         editor.complete(addIconAction, true, false, false);
         frame.addHelpMenu("package.jmri.jmrit.display.IconAdder", true);
@@ -2232,6 +2141,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         return result;
     }
 
+    @SuppressFBWarnings(value="BC_UNCONFIRMED_CAST_OF_RETURN_VALUE", justification="iconEditor requested as exact type")
     SlipTurnoutIcon addSlip() {
         SlipTurnoutIcon result = new SlipTurnoutIcon(this);
         SlipIconAdder editor = (SlipIconAdder) getIconEditor("SlipTOEditor");
@@ -2426,6 +2336,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
         return result;
     }
 
+    @SuppressFBWarnings(value="BC_UNCONFIRMED_CAST_OF_RETURN_VALUE", justification="iconEditor requested as exact type")
     public MultiSensorIcon addMultiSensor() {
         MultiSensorIcon result = new MultiSensorIcon(this);
         MultiSensorIconAdder editor = (MultiSensorIconAdder) getIconEditor("MultiSensor");
@@ -2492,22 +2403,32 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
 
     public void setTitle() {
         String name = "";
-        if (_targetPanel.getTopLevelAncestor() != null) {
-            name = ((JFrame) _targetPanel.getTopLevelAncestor()).getTitle();
+        Container ancestor = _targetPanel.getTopLevelAncestor();
+        if (ancestor instanceof JFrame) {
+            name = ((JFrame) ancestor).getTitle();
         }
         if (name == null || name.equals("")) {
             super.setTitle(Bundle.getMessage("LabelEditor"));
         } else {
             super.setTitle(name + " " + Bundle.getMessage("LabelEditor"));
         }
-        Iterator<JFrameItem> iter = _iconEditorFrame.values().iterator();
-        while (iter.hasNext()) {
-            JFrameItem frame = iter.next();
+        for (JFrameItem frame : _iconEditorFrame.values()) {
             frame.setTitle(frame.getName() + " (" + name + ")");
         }
         setName(name);
     }
 
+    /**
+     * Create a frame showing all images in the set used for an icon.
+     * Opened when editItemInPanel button is clicked in the Edit Icon Panel,
+     * shown after icon's context menu Edit Icon... item is selected.
+     *
+     * @param name bean type name
+     * @param add true when used to add a new item on panel, false when used to edit an item already on the panel
+     * @param table true for bean types presented as table instead of icons
+     * @param editor parent frame of the image frame
+     * @return JFrame connected to the editor,  to be filled with icons
+     */
     protected JFrameItem makeAddIconFrame(String name, boolean add, boolean table, IconAdder editor) {
         log.debug("makeAddIconFrame for {}, add= {}, table= {}", name, add, table);
         String txt;
@@ -2564,13 +2485,10 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             menuBar.add(findIcon);
 
             JMenuItem editItem = new JMenuItem(Bundle.getMessage("editIndexMenu"));
-            editItem.addActionListener(new ActionListener() {
-                @Override
-                public void actionPerformed(ActionEvent e) {
-                    ImageIndexEditor ii = InstanceManager.getDefault(ImageIndexEditor.class);
-                    ii.pack();
-                    ii.setVisible(true);
-                }
+            editItem.addActionListener(e -> {
+                ImageIndexEditor ii = InstanceManager.getDefault(ImageIndexEditor.class);
+                ii.pack();
+                ii.setVisible(true);
             });
             findIcon.add(editItem);
             findIcon.addSeparator();
@@ -2607,7 +2525,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
                 });
             }
         } else {
-            log.error("No icon editor specified for {}", name); //NOI18N
+            log.error("No icon editor specified for {}", name); // NOI18N
         }
         if (add) {
             txt = MessageFormat.format(Bundle.getMessage("AddItem"), Bundle.getMessage(BundleName));
@@ -2662,25 +2580,10 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
 
     /**
      * Dispose of the editor.
-     *
-     * @param clear true to discard Positionables; false to retain Positionables
-     *              for future use
-     * @deprecated since 4.11.5. use {@link #dispose()} instead.
-     */
-    @Deprecated
-    public void dispose(boolean clear) {
-        log.debug("Editor delete and dispose done. clear= {}", clear);
-        dispose();
-    }
-
-    /**
-     * Dispose of the editor.
      */
     @Override
     public void dispose() {
-        Iterator<JFrameItem> iter = _iconEditorFrame.values().iterator();
-        while (iter.hasNext()) {
-            JFrameItem frame = iter.next();
+        for (JFrameItem frame : _iconEditorFrame.values()) {
             frame.setDefaultCloseOperation(WindowConstants.DO_NOTHING_ON_CLOSE);
             frame.dispose();
         }
@@ -2690,7 +2593,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             cm.deregister(this);
         }
         InstanceManager.getDefault(PanelMenu.class).deletePanel(this);
-        Editor.editors.remove(this);
+        InstanceManager.getDefault(EditorManager.class).removeEditor(this);
         setVisible(false);
         _contents.clear();
         removeAll();
@@ -2703,8 +2606,8 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     public void showToolTip(Positionable selection, MouseEvent event) {
         ToolTip tip = selection.getToolTip();
         String txt = tip.getText();
-        if (txt == null) {
-            tip.setText(selection.getNameString());
+        if (txt == null || txt.isEmpty()) {
+            return;
         }
         tip.setLocation(selection.getX() + selection.getWidth() / 2, selection.getY() + selection.getHeight());
         setToolTip(tip);
@@ -2976,31 +2879,34 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     protected boolean setTextAttributes(Positionable p, JPopupMenu popup) {
         popup.add(new AbstractAction(Bundle.getMessage("TextAttributes")) {
             Positionable comp;
+            Editor ed;
 
             @Override
             public void actionPerformed(ActionEvent e) {
-                (new TextAttrDialog(comp)).setVisible(true);
+                (new TextAttrDialog(comp, ed)).setVisible(true);
             }
 
             AbstractAction init(Positionable pos, Editor e) { // e unused?
                 comp = pos;
+                ed = e;
                 return this;
             }
         }.init(p, this));
         return true;
     }
 
-    public class TextAttrDialog extends JDialog {
+    public class TextAttrDialog extends DisplayFrame {
 
         Positionable _pos;
         DecoratorPanel _decorator;
+        BufferedImage[] _backgrounds;
 
-        TextAttrDialog(Positionable p) {
-            super(_targetFrame, Bundle.getMessage("TextAttributes"), true);
+        TextAttrDialog(Positionable p, Editor ed) {
+            super(Bundle.getMessage("TextAttributes"), ed);
             _pos = p;
             JPanel panel = new JPanel();
             panel.setLayout(new BoxLayout(panel, BoxLayout.Y_AXIS));
-            _decorator = new DecoratorPanel(_pos.getEditor(), null);
+            _decorator = new DecoratorPanel(this);
             _decorator.initDecoratorPanel(_pos);
             panel.add(_decorator);
             panel.add(makeDoneButtonPanel());
@@ -3009,7 +2915,7 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             dim = new Dimension(dim.width +10, dim.height + 10);
             sp.setPreferredSize(dim);
             setContentPane(sp);
-            setLocation(jmri.util.PlaceWindow.nextTo(_pos.getEditor(), _pos, this));
+            InstanceManager.getDefault(jmri.util.PlaceWindow.class).nextTo(_pos.getEditor(), _pos, this);
             pack();
         }
 
@@ -3017,26 +2923,20 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             JPanel panel0 = new JPanel();
             panel0.setLayout(new FlowLayout());
             JButton doneButton = new JButton(Bundle.getMessage("ButtonDone"));
-            doneButton.addActionListener(new ActionListener() {
-                @Override
-                public void actionPerformed(ActionEvent a) {
-                    _decorator.setSuppressRecentColor(false);
-                    _decorator.setAttributes(_pos);
-                    if (_selectionGroup != null) {
-                        setSelectionsAttributes(_pos);
-                    }
-                   dispose();
+            doneButton.addActionListener(a -> {
+                _decorator.setSuppressRecentColor(false);
+                _decorator.setAttributes(_pos);
+                if (_selectionGroup != null) {
+                    setSelectionsAttributes(_pos);
                 }
+               dispose();
             });
             panel0.add(doneButton);
 
             JButton cancelButton = new JButton(Bundle.getMessage("ButtonCancel"));
-            cancelButton.addActionListener(new ActionListener() {
-                @Override
-                public void actionPerformed(ActionEvent a) {
-                    _decorator.setSuppressRecentColor(false);
-                    dispose();
-                }
+            cancelButton.addActionListener(a -> {
+                _decorator.setSuppressRecentColor(false);
+                dispose();
             });
             panel0.add(cancelButton);
             return panel0;
@@ -3294,9 +3194,9 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
     @Override
     public void vetoableChange(PropertyChangeEvent evt) throws PropertyVetoException {
         NamedBean nb = (NamedBean) evt.getOldValue();
-        if ("CanDelete".equals(evt.getPropertyName())) { //IN18N
+        if ("CanDelete".equals(evt.getPropertyName())) { // NOI18N
             StringBuilder message = new StringBuilder();
-            message.append(Bundle.getMessage("VetoInUseEditorHeader", getName())); //IN18N
+            message.append(Bundle.getMessage("VetoInUseEditorHeader", getName())); // NOI18N
             message.append("<br>");
             boolean found = false;
             int count = 0;
@@ -3309,11 +3209,11 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
             if (found) {
                 message.append(Bundle.getMessage("VetoFoundInPanel", count));
                 message.append("<br>");
-                message.append(Bundle.getMessage("VetoReferencesWillBeRemoved")); //IN18N
+                message.append(Bundle.getMessage("VetoReferencesWillBeRemoved")); // NOI18N
                 message.append("<br>");
                 throw new PropertyVetoException(message.toString(), evt);
             }
-        } else if ("DoDelete".equals(evt.getPropertyName())) { //IN18N
+        } else if ("DoDelete".equals(evt.getPropertyName())) { // NOI18N
             ArrayList<Positionable> toDelete = new ArrayList<>();
             for (Positionable p : _contents) {
                 if (nb.equals(p.getNamedBean())) {
@@ -3402,11 +3302,14 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      * Get a List of the currently-existing Editor objects. The returned list is
      * a copy made at the time of the call, so it can be manipulated as needed
      * by the caller.
+     * <p>
+     * This is a convenience reference to {@link jmri.jmrit.display.EditorManager#getEditorsList()}
      *
      * @return a List of Editors
+     * @see jmri.jmrit.display.EditorManager#getEditorsList()
      */
     synchronized public static List<Editor> getEditors() {
-        return new ArrayList<>(editors);
+        return InstanceManager.getDefault(EditorManager.class).getEditorsList();
     }
 
     /**
@@ -3415,36 +3318,86 @@ abstract public class Editor extends JmriJFrame implements MouseListener, MouseM
      * <p>
      * The returned list is a copy made at the time of the call, so it can be
      * manipulated as needed by the caller.
+     * <p>
+     * This is a convenience reference to {@link jmri.jmrit.display.EditorManager#getEditorsList(Class)}
      *
      * @param <T>  the Class the list should be limited to.
      * @param type the Class the list should be limited to.
      * @return a List of Editors.
+     * @see jmri.jmrit.display.EditorManager#getEditorsList(Class)
      */
-    @SuppressWarnings("unchecked")
     synchronized public static <T extends Editor> List<T> getEditors(@Nonnull Class<T> type) {
-        List<T> result = new ArrayList<>();
-        for (Editor e : Editor.getEditors()) {
-            if (type.isInstance(e)) {
-                result.add((T) e);
-            }
-        }
-        return result;
+        return InstanceManager.getDefault(EditorManager.class).getEditorsList(type);
     }
 
     /**
      * Get an Editor of a particular name. If more than one exists, there's no
      * guarantee as to which is returned.
+     * <p>
+     * This is a convenience reference to {@link jmri.jmrit.display.EditorManager#getEditor(String)}
      *
      * @param name the editor to get
      * @return an Editor or null if no matching Editor could be found
+     * @see jmri.jmrit.display.EditorManager#getEditor(String)
      */
     public static Editor getEditor(String name) {
-        for (Editor e : Editor.getEditors()) {
-            if (e.getTitle().equals(name)) {
-                return e;
-            }
+        return InstanceManager.getDefault(EditorManager.class).getEditor(name);
+    }
+
+    public List<NamedBeanUsageReport> getUsageReport(NamedBean bean) {
+        List<NamedBeanUsageReport> report = new ArrayList<>();
+        if (bean != null) {
+            getContents().forEach((pos) -> {
+                String data = getUsageData(pos);
+                if (pos instanceof MultiSensorIcon) {
+                    MultiSensorIcon multi = (MultiSensorIcon) pos;
+                    multi.getSensors().forEach((sensor) -> {
+                        if (bean.equals(sensor)) {
+                            report.add(new NamedBeanUsageReport("PositionalIcon", data));
+                        }
+                    });
+
+                } else if (pos instanceof SlipTurnoutIcon) {
+                    SlipTurnoutIcon slip3Scissor = (SlipTurnoutIcon) pos;
+                    if (bean.equals(slip3Scissor.getTurnout(SlipTurnoutIcon.EAST))) {
+                        report.add(new NamedBeanUsageReport("PositionalIcon", data));
+                    }
+                    if (bean.equals(slip3Scissor.getTurnout(SlipTurnoutIcon.WEST))) {
+                        report.add(new NamedBeanUsageReport("PositionalIcon", data));
+                    }
+                    if (slip3Scissor.getNamedTurnout(SlipTurnoutIcon.LOWEREAST) != null) {
+                        if (bean.equals(slip3Scissor.getTurnout(SlipTurnoutIcon.LOWEREAST))) {
+                            report.add(new NamedBeanUsageReport("PositionalIcon", data));
+                        }
+                    }
+                    if (slip3Scissor.getNamedTurnout(SlipTurnoutIcon.LOWERWEST) != null) {
+                        if (bean.equals(slip3Scissor.getTurnout(SlipTurnoutIcon.LOWERWEST))) {
+                            report.add(new NamedBeanUsageReport("PositionalIcon", data));
+                        }
+                    }
+
+                } else if (pos instanceof LightIcon) {
+                    LightIcon icon = (LightIcon) pos;
+                    if (bean.equals(icon.getLight())) {
+                        report.add(new NamedBeanUsageReport("PositionalIcon", data));
+                    }
+
+                } else {
+                    if (bean.equals(pos.getNamedBean())) {
+                        report.add(new NamedBeanUsageReport("PositionalIcon", data));
+                    }
+               }
+            });
         }
-        return null;
+        return report;
+    }
+
+    String getUsageData(Positionable pos) {
+        Point point = pos.getLocation();
+        return String.format("%s :: x=%d, y=%d",
+                pos.getClass().getSimpleName(),
+                Math.round(point.getX()),
+                Math.round(point.getY()));
     }
 
     // initialize logging
