@@ -13,6 +13,7 @@ import jmri.jmrit.dispatcher.DispatcherFrame;
 import jmri.jmrit.display.PanelMenu;
 import jmri.jmrit.display.Positionable;
 import jmri.jmrit.display.layoutEditor.LayoutEditor;
+import jmri.jmrit.display.layoutEditor.LayoutShape;
 import jmri.jmrit.display.layoutEditor.LayoutSlip;
 import jmri.jmrit.display.layoutEditor.LayoutTrack;
 import jmri.jmrit.display.layoutEditor.LayoutTrackDrawingOptions;
@@ -40,7 +41,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
     }
 
     /**
-     * Default implementation for storing the contents of a LayoutEditor
+     * Default implementation for storing the contents of a LayoutEditor.
      *
      * @param o Object to store, of type LayoutEditor
      * @return Element containing the complete info
@@ -53,15 +54,21 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
 
         panel.setAttribute("class", getClass().getName());
         panel.setAttribute("name", p.getLayoutName());
-        panel.setAttribute("x", "" + p.getUpperLeftX());
-        panel.setAttribute("y", "" + p.getUpperLeftY());
-        // From this version onwards separate sizes for window and panel are stored the
-        // following two statements allow files written here to be read in 2.2 and before
-        panel.setAttribute("height", "" + p.getLayoutHeight());
-        panel.setAttribute("width", "" + p.getLayoutWidth());
-        // From this version onwards separate sizes for window and panel are stored
-        panel.setAttribute("windowheight", "" + p.getWindowHeight());
-        panel.setAttribute("windowwidth", "" + p.getWindowWidth());
+        if (InstanceManager.getDefault(jmri.util.gui.GuiLafPreferencesManager.class).isEditorUseOldLocSize()) {
+            panel.setAttribute("x", "" + p.getUpperLeftX());
+            panel.setAttribute("y", "" + p.getUpperLeftY());
+            panel.setAttribute("windowheight", "" + p.getWindowHeight());
+            panel.setAttribute("windowwidth", "" + p.getWindowWidth());
+        } else {
+            // Use real location and size
+            java.awt.Point loc = p.getLocation();
+            panel.setAttribute("x", "" + loc.x);
+            panel.setAttribute("y", "" + loc.y);
+
+            java.awt.Dimension size = p.getSize();
+            panel.setAttribute("windowheight", "" + size.height);
+            panel.setAttribute("windowwidth", "" + size.width);
+        }
         panel.setAttribute("panelheight", "" + p.getLayoutHeight());
         panel.setAttribute("panelwidth", "" + p.getLayoutWidth());
         panel.setAttribute("sliders", "" + (p.getScroll() ? "yes" : "no")); // deprecated
@@ -86,7 +93,17 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         panel.setAttribute("defaultoccupiedtrackcolor", p.getDefaultOccupiedTrackColor());
         panel.setAttribute("defaultalternativetrackcolor", p.getDefaultAlternativeTrackColor());
         panel.setAttribute("defaulttextcolor", p.getDefaultTextColor());
-        panel.setAttribute("turnoutcirclecolor", p.getTurnoutCircleColor());
+        String turnoutCircleColor = p.getTurnoutCircleColor();
+        panel.setAttribute("turnoutcirclecolor", turnoutCircleColor);
+        String turnoutCircleThrownColor = p.getTurnoutCircleThrownColor();
+        // optional attributes
+        if (!turnoutCircleColor.equals(turnoutCircleThrownColor)) {
+            panel.setAttribute("turnoutcirclethrowncolor", turnoutCircleThrownColor);
+        }
+        if (p.isTurnoutFillControlCircles()) {
+            panel.setAttribute("turnoutfillcontrolcircles", "yes");
+        }
+
         panel.setAttribute("turnoutcirclesize", "" + p.getTurnoutCircleSize());
         panel.setAttribute("turnoutdrawunselectedleg", (p.isTurnoutDrawUnselectedLeg() ? "yes" : "no"));
         panel.setAttribute("turnoutbx", Float.toString((float) p.getTurnoutBX()));
@@ -116,7 +133,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
                 panel.addContent(e);
             }
         } catch (Exception e) {
-            log.error("Error storing contents element: " + e);
+            log.error("Error storing contents element: ", e);
         }
 
         // note: moving zoom attribute into per-window user preference
@@ -133,7 +150,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
                         panel.addContent(e);
                     }
                 } catch (Exception e) {
-                    log.error("Error storing contents element: " + e);
+                    log.error("Error storing contents element: ", e);
                 }
             } else {
                 log.warn("Null entry found when storing panel contents.");
@@ -144,8 +161,18 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         List<LayoutTrack> layoutTracks = p.getLayoutTracks();
         num = layoutTracks.size();
         if (log.isDebugEnabled()) {
-            log.debug("N LayoutTrack elements: " + num);
+            log.debug("N LayoutTrack elements: {}", num);
         }
+
+        // uncomment this (!!!temporarly!!!) to save alphanumerically sorted by ID
+//        log.error("DO NOT LEAVE THIS ENABLED FOR PRODUCTION: ORGINAL ORDER MUST BE MAINTAINED.");
+//        Collections.sort(layoutTracks, new Comparator<LayoutTrack>() {
+//            @Override
+//            public int compare(LayoutTrack t1, LayoutTrack t2) {
+//                AlphanumComparator ac = new AlphanumComparator();
+//                return ac.compare(t1.getId(), t2.getId());
+//            }
+//        });
 
         // Because some people (like me) like to edit their panel.xml files
         // directly we're going to group the layout tracks by class before
@@ -184,9 +211,22 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
                     panel.addContent(e);
                 }
             } catch (Exception e) {
-                log.error("Error storing layoutturnout element: " + e);
+                log.error("Error storing layoutturnout element: ", e);
             }
         }
+
+        // include Layout Shapes
+        for (LayoutShape ls : p.getLayoutShapes()) {
+            try {
+                Element e = jmri.configurexml.ConfigXmlManager.elementFromObject(ls);
+                if (e != null) {
+                    panel.addContent(e);
+                }
+            } catch (Exception e) {
+                log.error("Error storing layout shape element: ", e);
+            }
+        }
+
         return panel;
     }   // store
 
@@ -216,8 +256,12 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         int sidetrackwidth = 3;
         int mainlinetrackwidth = 3;
         try {
-            x = shared.getAttribute("x").getIntValue();
-            y = shared.getAttribute("y").getIntValue();
+            if ((a = shared.getAttribute("x")) != null) {
+                x = a.getIntValue();
+            }
+            if ((a = shared.getAttribute("y")) != null) {
+                y = a.getIntValue();
+            }
 
             // For compatibility with previous versions, try and
             // see if height and width tags are contained in the file
@@ -258,7 +302,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
             try {
                 xScale = (Float.parseFloat(a.getValue()));
             } catch (NumberFormatException e) {
-                log.error("failed to convert xscale attribute to float - " + a.getValue());
+                log.error("failed to convert xscale attribute to float - {}", a.getValue());
                 result = false;
             }
         }
@@ -266,7 +310,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
             try {
                 yScale = (Float.parseFloat(a.getValue()));
             } catch (NumberFormatException e) {
-                log.error("failed to convert yscale attribute to float - " + a.getValue());
+                log.error("failed to convert yscale attribute to float - {}", a.getValue());
                 result = false;
             }
         }
@@ -288,6 +332,27 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
                 return false;
             }
         }
+
+        // If available, override location and size with machine dependent values
+        if (!InstanceManager.getDefault(jmri.util.gui.GuiLafPreferencesManager.class).isEditorUseOldLocSize()) {
+            jmri.UserPreferencesManager prefsMgr = InstanceManager.getNullableDefault(jmri.UserPreferencesManager.class);
+            if (prefsMgr != null) {
+                String windowFrameRef = "jmri.jmrit.display.layoutEditor.LayoutEditor:" + name;
+
+                java.awt.Point prefsWindowLocation = prefsMgr.getWindowLocation(windowFrameRef);
+                if (prefsWindowLocation != null) {
+                    x = (int) prefsWindowLocation.getX();
+                    y = (int) prefsWindowLocation.getY();
+                }
+
+                java.awt.Dimension prefsWindowSize = prefsMgr.getWindowSize(windowFrameRef);
+                if (prefsWindowSize != null && prefsWindowSize.getHeight() != 0 && prefsWindowSize.getWidth() != 0) {
+                    windowHeight = (int) prefsWindowSize.getHeight();
+                    windowWidth = (int) prefsWindowSize.getWidth();
+                }
+            }
+        }
+
         LayoutEditor panel = new LayoutEditor(name);
         panel.setLayoutName(name);
         InstanceManager.getDefault(PanelMenu.class).addEditorPanel(panel);
@@ -298,23 +363,58 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         panel.setXScale(xScale);
         panel.setYScale(yScale);
 
-        String defaultColor = ColorUtil.ColorDarkGray;
-        if ((a = shared.getAttribute("defaulttrackcolor")) != null) {
-            defaultColor = a.getValue();
+        String color = ColorUtil.ColorDarkGray;
+        try {
+            if ((a = shared.getAttribute("defaulttrackcolor")) != null) {
+                color = a.getValue();
+            }
+            panel.setDefaultTrackColor(ColorUtil.stringToColor(color));
+        } catch (IllegalArgumentException e) {
+            panel.setDefaultTrackColor(Color.BLACK);
+            log.error("Invalid defaulttrackcolor {}; using black", color);
         }
-        panel.setDefaultTrackColor(ColorUtil.stringToColor(defaultColor));
 
-        String defaultTextColor = ColorUtil.ColorBlack;
-        if ((a = shared.getAttribute("defaulttextcolor")) != null) {
-            defaultTextColor = a.getValue();
+        color = ColorUtil.ColorBlack;
+        try {
+            if ((a = shared.getAttribute("defaulttextcolor")) != null) {
+                color = a.getValue();
+            }
+            panel.setDefaultTextColor(ColorUtil.stringToColor(color));
+        } catch (IllegalArgumentException e) {
+            panel.setDefaultTextColor(Color.BLACK);
+            log.error("Invalid defaulttextcolor {}; using black", color);
         }
-        panel.setDefaultTextColor(ColorUtil.stringToColor(defaultTextColor));
 
-        String turnoutCircleColor = "track";  //default to using use default track color for circle color
-        if ((a = shared.getAttribute("turnoutcirclecolor")) != null) {
-            turnoutCircleColor = a.getValue();
+        color = "track";  //default to using use default track color for circle color
+        try {
+            if ((a = shared.getAttribute("turnoutcirclecolor")) != null) {
+                color = a.getValue();
+            }
+            panel.setTurnoutCircleColor(ColorUtil.stringToColor(color));
+        } catch (IllegalArgumentException e) {
+            panel.setTurnoutCircleColor(Color.BLACK);
+            log.error("Invalid color {}; using black", color);
         }
-        panel.setTurnoutCircleColor(ColorUtil.stringToColor(turnoutCircleColor));
+
+        // default to using turnout circle color just set
+        try {
+            if ((a = shared.getAttribute("turnoutcirclethrowncolor")) != null) {
+                color = a.getValue();
+            }
+            panel.setTurnoutCircleThrownColor(ColorUtil.stringToColor(color));
+        } catch (IllegalArgumentException e) {
+            panel.setTurnoutCircleThrownColor(Color.BLACK);
+            log.error("Invalid color {}; using black", color);
+        }
+
+        try {   // the "turnoutfillcontrolcircles" attribute has a default="no" value in the schema;
+            // it will always return a "no" attribute if the attribute is not present.
+            panel.setTurnoutFillControlCircles(shared.getAttribute("turnoutfillcontrolcircles").getBooleanValue());
+        } catch (DataConversionException e) {
+            log.warn("unable to convert turnoutfillcontrolcircles attribute");
+        } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing turnoutfillcontrolcircles attribute");
+        }
 
         if ((a = shared.getAttribute("turnoutcirclesize")) != null) {
             try {
@@ -329,6 +429,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert turnoutdrawunselectedleg attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing turnoutdrawunselectedleg attribute");
         }
 
         // turnout size parameters
@@ -336,7 +437,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
             try {
                 panel.setTurnoutBX(Float.parseFloat(a.getValue()));
             } catch (NumberFormatException e) {
-                log.error("failed to convert turnoutbx to float - " + a.getValue());
+                log.error("failed to convert turnoutbx to float - {}", a.getValue());
                 result = false;
             }
         }
@@ -345,7 +446,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
             try {
                 panel.setTurnoutCX(Float.parseFloat(a.getValue()));
             } catch (NumberFormatException e) {
-                log.error("failed to convert turnoutcx to float - " + a.getValue());
+                log.error("failed to convert turnoutcx to float - {}", a.getValue());
                 result = false;
             }
         }
@@ -354,7 +455,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
             try {
                 panel.setTurnoutWid(Float.parseFloat(a.getValue()));
             } catch (NumberFormatException e) {
-                log.error("failed to convert turnoutwid to float - " + a.getValue());
+                log.error("failed to convert turnoutwid to float - {}", a.getValue());
                 result = false;
             }
         }
@@ -363,7 +464,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
             try {
                 panel.setXOverLong(Float.parseFloat(a.getValue()));
             } catch (NumberFormatException e) {
-                log.error("failed to convert xoverlong to float - " + a.getValue());
+                log.error("failed to convert xoverlong to float - {}", a.getValue());
                 result = false;
             }
         }
@@ -371,7 +472,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
             try {
                 panel.setXOverHWid(Float.parseFloat(a.getValue()));
             } catch (NumberFormatException e) {
-                log.error("failed to convert xoverhwid to float - " + a.getValue());
+                log.error("failed to convert xoverhwid to float - {}", a.getValue());
                 result = false;
             }
         }
@@ -379,7 +480,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
             try {
                 panel.setXOverShort(Float.parseFloat(a.getValue()));
             } catch (NumberFormatException e) {
-                log.error("failed to convert xovershort to float - " + a.getValue());
+                log.error("failed to convert xovershort to float - {}", a.getValue());
                 result = false;
             }
         }
@@ -388,7 +489,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
             try {
                 panel.setGridSize(Integer.parseInt(a.getValue()));
             } catch (NumberFormatException e) {
-                log.error("failed to convert gridSize to int - " + a.getValue());
+                log.error("failed to convert gridSize to int - {}", a.getValue());
                 result = false;
             }
         }
@@ -398,7 +499,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
             try {
                 panel.setGridSize2nd(Integer.parseInt(a.getValue()));
             } catch (NumberFormatException e) {
-                log.error("failed to convert gridSize2nd to int - " + a.getValue());
+                log.error("failed to convert gridSize2nd to int - {}", a.getValue());
                 result = false;
             }
         }
@@ -408,6 +509,8 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert positionable attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing positionable attribute");
+
         }
 
         try {
@@ -415,6 +518,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert controlling attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing controlling attribute");
         }
 
         try {
@@ -422,6 +526,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert animating attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing animating attribute");
         }
 
         try {
@@ -429,6 +534,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert drawgrid attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing drawgrid attribute");
         }
 
         try {
@@ -436,6 +542,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert snaponadd attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing snaponadd attribute");
         }
 
         try {
@@ -443,6 +550,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert snaponmove attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing snaponmove attribute");
         }
 
         try {
@@ -450,6 +558,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert turnoutcircles attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing turnoutcircles attribute");
         }
 
         try {
@@ -457,6 +566,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert tooltipsnotedit attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing tooltipsnotedit attribute");
         }
 
         try {
@@ -464,6 +574,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert autoblkgenerate attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing autoblkgenerate attribute");
         }
 
         try {
@@ -471,19 +582,35 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert tooltipsinedit attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing tooltipsinedit attribute");
         }
 
         // set default track color
         if ((a = shared.getAttribute("defaulttrackcolor")) != null) {
-            panel.setDefaultTrackColor(ColorUtil.stringToColor(a.getValue()));
+            try {
+                panel.setDefaultTrackColor(ColorUtil.stringToColor(a.getValue()));
+            } catch (IllegalArgumentException e) {
+                panel.setDefaultTrackColor(Color.darkGray);
+                log.error("Invalid defaulttrackcolor {}; using 'darkGray'", a.getValue());
+            }
         }
-        // set default track color
+        // set default occupied track color
         if ((a = shared.getAttribute("defaultoccupiedtrackcolor")) != null) {
-            panel.setDefaultOccupiedTrackColor(ColorUtil.stringToColor(a.getValue()));
+            try {
+                panel.setDefaultOccupiedTrackColor(ColorUtil.stringToColor(a.getValue()));
+            } catch (IllegalArgumentException e) {
+                panel.setDefaultOccupiedTrackColor(Color.red);
+                log.error("Invalid defaultoccupiedtrackcolor {}; using 'red'", a.getValue());
+            }
         }
-        // set default track color
+        // set default alternative track color
         if ((a = shared.getAttribute("defaultalternativetrackcolor")) != null) {
-            panel.setDefaultAlternativeTrackColor(ColorUtil.stringToColor(a.getValue()));
+            try {
+                panel.setDefaultAlternativeTrackColor(ColorUtil.stringToColor(a.getValue()));
+            } catch (IllegalArgumentException e) {
+                panel.setDefaultAlternativeTrackColor(Color.white);
+                log.error("Invalid defaultalternativetrackcolor {}; using 'white'", a.getValue());
+            }
         }
         try {
             int red = shared.getAttribute("redBackground").getIntValue();
@@ -495,6 +622,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("Could not parse color attributes!");
         } catch (NullPointerException e) {  // considered normal if the attributes are not present
+            log.debug("missing backbround color attributes");
         }
 
         try {
@@ -502,6 +630,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert Layout Editor useDirectTurnoutControl attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing useDirectTurnoutControl attribute");
         }
 
         // Set editor's option flags, load content after
@@ -512,29 +641,31 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         for (Element item : shared.getChildren()) {
             // get the class, hence the adapter object to do loading
             String adapterName = item.getAttribute("class").getValue();
+            adapterName = jmri.configurexml.ConfigXmlManager.currentClassName(adapterName);
 
             if (log.isDebugEnabled()) {
                 String id = "<null>";
                 try {
                     id = item.getAttribute("name").getValue();
-                    log.debug("Load " + id + " for [" + panel.getName() + "] via " + adapterName);
+                    log.debug("Load {} for [{}] via {}", id, panel.getName(), adapterName);
                 } catch (NullPointerException e) {
-                    log.debug("Load layout object for [" + panel.getName() + "] via " + adapterName);
+                    log.debug("Load layout object for [{}] via {}", panel.getName(), adapterName);
+                    log.debug("Load layout object for [{}] via {}", panel.getName(), adapterName);
                 } catch (RuntimeException e) {
                     throw e;
                 } catch (Exception e) {
                 }
             }
             try {
-                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                 // and do it
                 adapter.load(item, panel);
                 if (!panel.loadOK()) {
                     result = false;
                 }
-            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException
+            } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException
                     | jmri.configurexml.JmriConfigureXmlException
-                    | RuntimeException e) {
+                    | java.lang.reflect.InvocationTargetException e) {
                 log.error("Exception while loading {}", item.getName(), e);
                 result = false;
             }
@@ -551,6 +682,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert editable attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing editable attribute");
         }
 
         try {
@@ -558,6 +690,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert showhelpbar attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing showhelpbar attribute");
         }
 
         try {
@@ -565,6 +698,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert antialiasing attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing antialiasing attribute");
         }
 
         // set contents state
@@ -575,6 +709,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
         } catch (DataConversionException e) {
             log.warn("unable to convert sliders attribute");
         } catch (NullPointerException e) {  // considered normal if the attribute is not present
+            log.debug("missing sliders attribute");
         }
         if ((a = shared.getAttribute("scrollable")) != null) {
             slValue = a.getValue();
@@ -592,7 +727,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
             cm.registerUser(panel);
         }
         //open Dispatcher frame if any Transits are defined, and open Dispatcher flag set on
-        if (jmri.InstanceManager.getDefault(jmri.TransitManager.class).getSystemNameList().size() > 0) {
+        if (jmri.InstanceManager.getDefault(jmri.TransitManager.class).getNamedBeanSet().size() > 0) {
             try {
                 boolean value = shared.getAttribute("openDispatcher").getBooleanValue();
                 panel.setOpenDispatcherOnLoad(value);
@@ -603,6 +738,7 @@ public class LayoutEditorXml extends AbstractXmlAdapter {
             } catch (DataConversionException e) {
                 log.warn("unable to convert openDispatcher attribute");
             } catch (NullPointerException e) {  // considered normal if the attribute is not present
+                log.debug("missing openDispatcher attribute");
             }
         }
         return result;
