@@ -2,8 +2,7 @@ package jmri.jmrix;
 
 import java.awt.BorderLayout;
 import java.awt.event.ActionEvent;
-import java.util.ArrayList;
-import java.util.ResourceBundle;
+import java.lang.reflect.InvocationTargetException;
 import javax.swing.BorderFactory;
 import javax.swing.BoxLayout;
 import javax.swing.JComboBox;
@@ -36,7 +35,6 @@ import org.slf4j.LoggerFactory;
  */
 public class JmrixConfigPane extends JPanel implements PreferencesPanel {
 
-    private static final ResourceBundle acb = ResourceBundle.getBundle("apps.AppsConfigBundle");
     public static final String NONE_SELECTED = Bundle.getMessage("noneSelected");
     public static final String NO_PORTS_FOUND = Bundle.getMessage("noPortsFound");
     public static final String NONE = Bundle.getMessage("none");
@@ -44,8 +42,8 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
     private final static Logger log = LoggerFactory.getLogger(JmrixConfigPane.class);
 
     /*
-     * Create panel is seperated off from the instance and synchronized, so that only
-     * one connection can be configured at once, this prevents multiple threads from
+     * Create panel is separated off from the instance and synchronized, so that only
+     * one connection can be configured at once. This prevents multiple threads from
      * trying to create the same panel at the same time.
      */
     /**
@@ -164,7 +162,10 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
         });
 
         // get the list of ConnectionConfig items into a selection box
-        classConnectionNameList = manager.getConnectionTypes((String) manuBox.getSelectedItem());
+        String selectedItem = (String) manuBox.getSelectedItem();
+        if (selectedItem != null) {
+            classConnectionNameList = manager.getConnectionTypes(selectedItem);
+        }
         classConnectionList = new jmri.jmrix.ConnectionConfig[classConnectionNameList.length + 1];
         modeBox.addItem(NONE_SELECTED);
         if (manuBox.getSelectedIndex() != 0) {
@@ -188,14 +189,21 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
                         }
                     } else {
                         Class<?> cl = Class.forName(className);
-                        config = (ConnectionConfig) cl.newInstance();
-                        modeBox.addItem(config.name());
+                        config = (ConnectionConfig) cl.getDeclaredConstructor().newInstance();
+                        if( !(config instanceof StreamConnectionConfig)) {
+                           // only include if the connection is not a 
+                           // StreamConnection.  Those connections require
+                           // additional context.
+                           modeBox.addItem(config.name());
+                        } else {
+                               continue;
+                        }
                     }
                     classConnectionList[n++] = config;
                 } catch (NullPointerException e) {
                     log.error("Attempt to load {} failed.", className, e);
-                } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
-                    log.debug("Attempt to load {} failed: {}.", className, e);
+                } catch (InvocationTargetException | ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException e) {
+                    log.error("Attempt to load {} failed: {}.", className, e);
                 }
             }
             if ((modeBox.getSelectedIndex() == 0) && (p.getComboBoxLastSelection((String) manuBox.getSelectedItem()) != null)) {
@@ -233,7 +241,10 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
     public void updateComboConnection() {
         modeBox.removeAllItems();
         modeBox.addItem(NONE_SELECTED);
-        classConnectionNameList = InstanceManager.getDefault(ConnectionConfigManager.class).getConnectionTypes((String) manuBox.getSelectedItem());
+        String selectedItem = (String) manuBox.getSelectedItem();
+        if (selectedItem != null) {
+            classConnectionNameList = InstanceManager.getDefault(ConnectionConfigManager.class).getConnectionTypes(selectedItem);
+        }
         classConnectionList = new jmri.jmrix.ConnectionConfig[classConnectionNameList.length + 1];
 
         if (manuBox.getSelectedIndex() != 0) {
@@ -249,13 +260,21 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
                 try {
                     jmri.jmrix.ConnectionConfig config;
                     Class<?> cl = Class.forName(classConnectionNameList1);
-                    config = (jmri.jmrix.ConnectionConfig) cl.newInstance();
-                    modeBox.addItem(config.name());
+                    config = (jmri.jmrix.ConnectionConfig) cl.getDeclaredConstructor().newInstance();
+                    if( !(config instanceof StreamConnectionConfig)) {
+                        // only include if the connection is not a 
+                        // StreamConnection.  Those connections require
+                        // additional context.
+                        modeBox.addItem(config.name());
+                    } else {
+                        continue;
+                    }
                     classConnectionList[n++] = config;
                     if (classConnectionNameList.length == 1) {
                         modeBox.setSelectedIndex(1);
                     }
-                } catch (NullPointerException | ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+                } catch (InvocationTargetException | NullPointerException | ClassNotFoundException 
+                                | InstantiationException | IllegalAccessException | NoSuchMethodException e) {
                     log.warn("Attempt to load {} failed: {}", classConnectionNameList1, e);
                 }
             }
@@ -280,8 +299,8 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
                 ccCurrent.dispose();
             }
             ccCurrent = classConnectionList[current];
-            classConnectionList[current].loadDetails(details);
-            classConnectionList[current].setManufacturer((String) manuBox.getSelectedItem());
+            ccCurrent.setManufacturer((String) manuBox.getSelectedItem());
+            ccCurrent.loadDetails(details);
         } else {
             if (ccCurrent != null) {
                 ccCurrent.dispose();
@@ -358,7 +377,7 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
 
     @Override
     public String getPreferencesItemText() {
-        return acb.getString("MenuConnections"); // NOI18N
+        return Bundle.getMessage("MenuConnections"); // NOI18N
     }
 
     @Override
@@ -402,13 +421,13 @@ public class JmrixConfigPane extends JPanel implements PreferencesPanel {
 
     @Override
     public boolean isDirty() {
-        // avoid potentially expensive exrta test for isDirty
+        // avoid potentially expensive extra test for isDirty
         if (log.isDebugEnabled()) {
             log.debug("Connection \"{}\" is {}.",
                     this.getConnectionName(),
-                    (this.isDirty || ((this.ccCurrent != null) ? this.ccCurrent.isDirty() : true) ? "dirty" : "clean"));
+                    (this.isDirty || ((this.ccCurrent == null) || this.ccCurrent.isDirty()) ? "dirty" : "clean"));
         }
-        return this.isDirty || ((this.ccCurrent != null) ? this.ccCurrent.isDirty() : true);
+        return this.isDirty || ((this.ccCurrent == null) || this.ccCurrent.isDirty());
     }
 
     @Override
