@@ -10,7 +10,7 @@ import org.slf4j.LoggerFactory;
  * JmriJFrame. By using reflection, this cuts the loader dependency on the
  * loaded class.
  *
- * @author	Bob Jacobsen Copyright (C) 2007
+ * @author Bob Jacobsen Copyright (C) 2007
  */
 public class JmriJFrameAction extends AbstractAction {
 
@@ -36,13 +36,13 @@ public class JmriJFrameAction extends AbstractAction {
 
         if (!name.equals("")) {
             try {
-                j = (JmriJFrame) Class.forName(name).newInstance();
+                j = (JmriJFrame) Class.forName(name).getDeclaredConstructor().newInstance();
                 j.initComponents();
                 j.setVisible(true);
             } catch (java.lang.ClassNotFoundException ex1) {
-                log.error("Couldn't create window, because couldn't find class: " + ex1);
+                log.error("Couldn't create window, because couldn't find class: {}", ex1);
             } catch (Exception ex2) {
-                log.error("Exception creating frame: " + ex2);
+                log.error("Exception creating frame: {}", ex2);
             }
         }
     }
